--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ on:
       - 'docs-zh/**'
       - '**.md'
   pull_request:
-    branches: [ master ]
+    branches: [ master, main ]
     paths-ignore:
       # - 'blobstore/**'
       - '.github/**'
